--- a/styles/styles.css
+++ b/styles/styles.css
@@ -132,6 +132,7 @@ textarea:focus, input-text:focus{
     border-radius: 35px;
 }
 #time{
+    font-family: 'Lobster', cursive;
     margin-top: 5%;
     margin-bottom: 3%;
     font-size: xx-large;
@@ -142,6 +143,7 @@ textarea:focus, input-text:focus{
     justify-content: space-around;
     align-items: center;
     width: 100%;
+    font-family: 'Lobster', cursive;
 }
 #temp{
     font-size: xx-large;
@@ -153,6 +155,7 @@ textarea:focus, input-text:focus{
     margin-top: 2%;
     text-align: center;
     font-size: x-large;
+    font-family: 'Lobster', cursive;
 }
 #container_1{
     display: flex;
